<resources>
    <string name="app_name">Flower</string>
    <string name="my_plants_fragment">My Plants Fragment</string>
    <string name="my_garden_fragment">My Garden Fragment</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_needs">Plant Needs</string>
    <string name="plant_duration">Plant Duration</string>
    <string name="plant_description">Plant Description</string>
    <string name="back_button">Back To Main Page</string>
    <string name="floating_button">Add New Plant To Garden</string>
    <string name="share_button">Click Share Button</string>
</resources>