<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantDetail">

    <ImageView
        android:id="@+id/detailImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_button_40"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black"
        android:textStyle="bold"
        android:background="@android:color/transparent" />
    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/share_button"
        android:contentDescription="@string/share_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailImageView">

        <!-- TextViews for displaying plant details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/plantDetailName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/plant_name"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:text="Plant Name"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:clickable="true"
                android:contentDescription="@string/floating_button"
                app:srcCompat="@android:drawable/ic_input_add" />
        </LinearLayout>

        <TextView
            android:id="@+id/plantDetailNeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/plant_needs"
            android:padding="5dp"
            android:text="Plant Needs"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantDetailDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/plant_duration"
            android:padding="5dp"
            android:text="Plant Duration"
            android:textSize="20sp" />

        <WebView
            android:id="@+id/plantDetailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/plant_description"
            android:text="Plant Description"
            android:textSize="20sp" />

        <!-- Add more UI elements as needed -->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>